# metadata-builder

./: .gitignore  API_SUMMARY.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  OPTIONAL_SECTIONS_GUIDE.md  README.md  README_LOOKML.md  STRUCTURE.md  STRUCTURE_STATUS.md  TODO.md  cli.py  docker-compose.api.yml  env.example  main.py  pyproject.toml  requirements.txt  setup.py  test_bigquery_metadata.py  test_column_descriptions.py  test_schema_table_filtering.py  test_smart_column_definitions.py
.github/workflows/: ci.yml
configs/: .config.yaml.example  config.yaml
docker/: Dockerfile  Dockerfile.api  docker-compose.api.yml  docker-compose.fullstack.yml
documentation/: AI_AGENT_TRANSFORMATION_ROADMAP.md  API_DOCUMENTATION.md  AUTHENTICATION_GUIDE.md  BIGQUERY_PARTITION_SUPPORT.md  CHANGELOG.md  CONTRIBUTING.md  ENVIRONMENT_SETUP.md  FASTMCP_VS_TRADITIONAL_MCP.md  FRONTEND_AUTHENTICATION_SETUP.md  FRONTEND_BACKEND_INTEGRATION_SUMMARY.md  FRONTEND_INSTALLATION.md  FRONTEND_REQUIREMENTS.md  METADATA_BUILDER_FUNCTIONAL_OVERVIEW.md  MULTI_USER_SETUP_INSTRUCTIONS.md  README.md  SAMPLE_DATA_OPTIMIZATION.md  SCHEMA_CONFIGURATION_GUIDE.md  SECURITY.md  SMART_CATEGORICAL_INTEGRATION.md  STORAGE_FORMAT.md  STRUCTURE.md  STRUCTURE_STATUS.md
examples/: api_example.py  bigquery_partition_example.py
frontend/: API_INTEGRATION.md  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.jsx  App.tsx  Routes.jsx
frontend/src/components/: AppIcon.jsx  EditableMetadata.jsx  ErrorBoundary.jsx  ProtectedRoute.jsx  SchemaFilterConfig.jsx  SchemaFilterModal.jsx
frontend/src/components/Agent/: ChatInterface.tsx
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/components/ui/: Breadcrumb.jsx  Button.jsx  Header.jsx  Input.jsx  Sidebar.jsx
frontend/src/contexts/: JobContext.jsx
frontend/src/pages/: DashboardPage.tsx  MetadataPage.tsx
frontend/src/pages/add-edit-database-connection/: index.jsx
frontend/src/pages/add-edit-database-connection/components/: AuthenticationForm.jsx  ConnectionDetailsForm.jsx  ConnectionTester.jsx  DatabaseTypeSelector.jsx  FormActions.jsx
frontend/src/pages/ai-chat-interface/: index.jsx
frontend/src/pages/ai-chat-interface/components/: ChatHeader.jsx  ChatMessage.jsx  (+3 more)
frontend/src/pages/database-connections-dashboard/: index.jsx
frontend/src/pages/job-queue-management/: index.jsx
frontend/src/pages/login/: index.jsx
frontend/src/pages/metadata-generation/: index.jsx
frontend/src/pages/schema-explorer/: index.jsx
frontend/src/services/: api.js  api.ts  authService.js  mockData.ts
frontend/src/styles/: tailwind.css
frontend/src/types/: index.ts
metadata_builder/: __init__.py  __main__.py
metadata_builder/agent/: __init__.py  conversation.py  core.py
metadata_builder/api/: __init__.py  app.py  dependencies.py  models.py  server.py
metadata_builder/api/routers/: __init__.py  agent.py  auth.py  database.py  metadata.py
metadata_builder/auth/: __init__.py  auth_utils.py  models.py
metadata_builder/cli/: __init__.py  __main__.py  cli.py  main.py
metadata_builder/config/: __init__.py  config.py  config.yaml
metadata_builder/core/: __init__.py  generate_table_metadata.py  llm_service.py  semantic_models.py
metadata_builder/database/: enums.py
metadata_builder/mcp/: __init__.py  fastmcp_server.py  server.py  simple_fastapi_server.py
metadata_builder/metadata/: __init__.py  exceptions.py  localhost_analytics_layers.yaml  postgres_analytics_layers_advanced.json  postgres_analytics_layers_advanced.yaml
metadata_builder/persistence/: __init__.py  models.py
metadata_builder/utils/: __init__.py  bigquery_handler.py  compute_data_quality_metrics.py  compute_numerical_stats.py  database_handler.py  database_handlers.py  extract_categorical_values.py  extract_constraints.py  identify_column_types.py  metadata_utils.py  storage_utils.py  token_counter.py
migrations/: add_predefined_schemas_column.py
scripts/: README.md  create_tables_simple.py  create_user_tables.py  create_user_tables.sql  demo_frontend.sh  fix_auth_dependencies.py  run_fastmcp_server.sh  run_fullstack_with_agent.sh  run_mcp_server.sh  run_simple_fastapi_server.sh  setup_auth.py  setup_env.py  setup_frontend.sh  setup_frontend_simple.sh  validate_schema_setup.py
tests/: __init__.py  test_config.py  test_lookml.py  test_optional_sections.py
(+19 files in other folders)
